POST and DELETE requests
